#SPDX-License-Identifier: LGPL-3.0-or-later
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/")

INCLUDE("${PROJECT_SOURCE_DIR}/alpine3d/ebalance/CMakeLists.txt")
INCLUDE("${PROJECT_SOURCE_DIR}/alpine3d/snowdrift/CMakeLists.txt")

###########################################################
#Set the source files
SET(a3d_sources
	${ebalance_sources}
	${snowdrift_sources}
	SnowpackInterfaceWorker.cc
	SnowpackInterface.cc
	Glaciers.cc
	TechSnowA3D.cc
	DataAssimilation.cc
	MeteoObj.cc
	MPIControl.cc
	OMPControl.cc
)

###########################################################
#Additional dependencies and options
FIND_PACKAGE(MeteoIO REQUIRED)
FIND_PACKAGE(Libsnowpack REQUIRED)
INCLUDE_DIRECTORIES(${METEOIO_INCLUDE_DIR} ${LIBSNOWPACK_INCLUDE_DIR})
LIST(APPEND EXTRA_LIBS ${LIBSNOWPACK_LIBRARY} ${METEOIO_LIBRARIES})

IF(MPI)
	FIND_PACKAGE(MPI REQUIRED)
	INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
	LIST(APPEND EXTRA_LIBS ${MPI_CXX_LIBRARIES})
ENDIF(MPI)

###########################################################
#set compiling targets
IF(BUILD_SHARED_LIBS)
	SET(SHAREDNAME ${PROJECT_NAME})
	ADD_LIBRARY(${SHAREDNAME} ${a3d_sources})
	TARGET_LINK_LIBRARIES(${SHAREDNAME} ${EXTRA_LIBS})
	SET_TARGET_PROPERTIES(${SHAREDNAME} PROPERTIES
		MACOSX_RPATH TRUE
		PREFIX "${LIBPREFIX}"
		LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib"
		ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib"
		RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib"
		CLEAN_DIRECT_OUTPUT 1
		VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
		SOVERSION "${VERSION_MAJOR}"
	)
	INSTALL(TARGETS ${SHAREDNAME}
		RUNTIME DESTINATION ${EXE_DEST} COMPONENT libraries
		LIBRARY DESTINATION ${LIB_DEST} COMPONENT libraries
		ARCHIVE DESTINATION ${LIB_DEST} COMPONENT libraries
	)
ENDIF(BUILD_SHARED_LIBS)

#static library. Please keep in mind that for Windows, a dll is a runtime
IF(BUILD_STATIC_LIBS)
	SET(STATICNAME ${PROJECT_NAME}_STATIC)
	SET(STATICLIBNAME ${PROJECT_NAME})
	ADD_LIBRARY(${STATICNAME} STATIC ${a3d_sources})
	TARGET_LINK_LIBRARIES(${STATICNAME} ${EXTRA_LIBS})
	SET_TARGET_PROPERTIES(${STATICNAME} PROPERTIES
		MACOSX_RPATH TRUE
		PREFIX "${LIBPREFIX}"
		LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib"
		ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib"
		RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib"
		CLEAN_DIRECT_OUTPUT 1
		OUTPUT_NAME ${STATICLIBNAME}
	)
	INSTALL(TARGETS ${STATICNAME}
		RUNTIME DESTINATION ${EXE_DEST} COMPONENT libraries
		LIBRARY DESTINATION ${LIB_DEST} COMPONENT libraries
		ARCHIVE DESTINATION ${LIB_DEST} COMPONENT libraries
	)
ENDIF(BUILD_STATIC_LIBS)

#################################################################################
# And now, build the binary
SET(A3D_BINARY "alpine3d.app")

#get the proper Alpine3D library
IF(BUILD_SHARED_LIBS)
	SET(ALPINE3D_LIBRARY ${PROJECT_NAME})
ELSE(BUILD_SHARED_LIBS)
	IF(BUILD_STATIC_LIBS)
		SET(ALPINE3D_LIBRARY "${PROJECT_NAME}_STATIC")
	ELSE(BUILD_STATIC_LIBS)
		MESSAGE(SEND_ERROR "Not building Alpine3D, the standalone application won't be able to build")
	ENDIF(BUILD_STATIC_LIBS)
ENDIF(BUILD_SHARED_LIBS)

#Plateform specific options
IF(APPLE)
	SET(TARGET_ARGS ${APP_ICON_MACOSX})
	#Handle extra libraries needed for GUI exceptions
	SET(EXTRA_LINKS "-framework CoreServices")
ENDIF(APPLE)
IF(WIN32)
	#Handle the missing getopt on Windows
	IF(MSVC)
		SET(getopt_src getopt.c)
	ENDIF(MSVC)
	SET(TARGET_ARGS ${getopt_src} ${APP_ICON_RESOURCE_WINDOWS})
ENDIF(WIN32)
IF(UNIX AND NOT HAIKU)
	SET(EXTRA_LINKS "dl;pthread")
ENDIF(UNIX AND NOT HAIKU)

SET(a3d_main AlpineControl.cc AlpineMain.cc)

#Prepare executable
ADD_EXECUTABLE(${A3D_BINARY} ${a3d_main} ${TARGET_ARGS})
TARGET_LINK_LIBRARIES(${A3D_BINARY} ${ALPINE3D_LIBRARY} ${EXTRA_LINKS} ${EXTRA_LIBS})
IF(BUILD_STATIC_LIBS)
	TARGET_LINK_OPTIONS(${A3D_BINARY} PRIVATE -static-libgcc -static-libstdc++ -static)
ENDIF(BUILD_STATIC_LIBS)

IF(PROFILER)
	TARGET_LINK_LIBRARIES(${A3D_BINARY} debug profiler)
ENDIF(PROFILER)

SET_TARGET_PROPERTIES(${A3D_BINARY} PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin"
	CLEAN_DIRECT_OUTPUT 1
	OUTPUT_NAME "alpine3d"
)

INSTALL(TARGETS ${A3D_BINARY} RUNTIME DESTINATION ${EXE_DEST} ${INSTALL_WIN32} COMPONENT exe)
