INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/")

IF(MSVC)
	SET(getopt_src getopt.c getopt_long.c)
ENDIF(MSVC)

SET(snowpack-app_sources
	Main.cc
	${getopt_src}
)

SET(SN_LINKS "snowpack")
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

FIND_PACKAGE(MeteoIO REQUIRED)
INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${METEOIO_INCLUDE_DIR})

INCLUDE("${CMAKE_MODULE_PATH}/BuildVersion.cmake")
BuildVersion()

IF(APPLE)
	#this is necessary for GUI exceptions
	LIST(APPEND SN_LINKS "-framework CoreServices")
ENDIF(APPLE)
IF(UNIX)
	LIST(APPEND SN_LINKS "dl;pthread")
ENDIF(UNIX)

#Prepare executable
SET(BINARY "snowpack.app")
ADD_EXECUTABLE(${BINARY} ${snowpack-app_sources})

TARGET_LINK_LIBRARIES(${BINARY} ${SN_LINKS})

SET_TARGET_PROPERTIES(${BINARY} PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin"
	CLEAN_DIRECT_OUTPUT 1
	OUTPUT_NAME "snowpack"
)

INSTALL(TARGETS ${BINARY}
	RUNTIME DESTINATION bin
	COMPONENT exe
)
