#SPDX-License-Identifier: LGPL-3.0-or-later
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/")
INCLUDE("${CMAKE_MODULE_PATH}/BuildVersion.cmake")
BuildVersionGIT()
SET(SN_BINARY "snowpack.app")

#get the proper Snowpack library
IF(BUILD_SHARED_LIBS)
	SET(LIBSNOWPACK_LIBRARY ${PROJECT_NAME})
ELSE(BUILD_SHARED_LIBS)
	IF(BUILD_STATIC_LIBS)
		SET(LIBSNOWPACK_LIBRARY "${PROJECT_NAME}_STATIC")
	ELSE(BUILD_STATIC_LIBS)
		MESSAGE(SEND_ERROR "Not building Snowpack, the standalone application won't be able to build")
	ENDIF(BUILD_STATIC_LIBS)
ENDIF(BUILD_SHARED_LIBS)
INCLUDE_DIRECTORIES(../../)

FIND_PACKAGE(MeteoIO REQUIRED)
INCLUDE_DIRECTORIES(${METEOIO_INCLUDE_DIR})

#Plateform specific options
IF(APPLE)
	SET(TARGET_ARGS ${APP_ICON_MACOSX})
	#Handle extra libraries needed for GUI exceptions
	SET(EXTRA_LINKS "-framework CoreServices")
ENDIF(APPLE)
IF(WIN32)
	#Handle the missing getopt on Windows
	IF(MSVC)
		SET(getopt_src getopt.c)
	ENDIF(MSVC)
	SET(TARGET_ARGS ${getopt_src} ${APP_ICON_RESOURCE_WINDOWS})
ENDIF(WIN32)
IF(UNIX AND NOT HAIKU)
	SET(EXTRA_LINKS "dl;pthread")
ENDIF(UNIX AND NOT HAIKU)

SET(snowpack-app_sources
	Main.cc
	${getopt_src}
)

#Prepare executable
ADD_EXECUTABLE(${SN_BINARY} ${snowpack-app_sources} ${TARGET_ARGS})
TARGET_LINK_LIBRARIES(${SN_BINARY} ${LIBSNOWPACK_LIBRARY} ${METEOIO_LIBRARY} ${EXTRA_LINKS})
IF(BUILD_STATIC_LIBS)
	TARGET_LINK_OPTIONS(${SN_BINARY} PRIVATE -static-libgcc -static-libstdc++ -static)
ENDIF(BUILD_STATIC_LIBS)

SET_TARGET_PROPERTIES(${SN_BINARY} PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin"
	CLEAN_DIRECT_OUTPUT 1
	OUTPUT_NAME "snowpack"
)

INSTALL(TARGETS ${SN_BINARY} RUNTIME DESTINATION ${EXE_DEST} ${INSTALL_WIN32} COMPONENT exe)
