INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")

IF(MSVC)
	SET(getopt_src getopt.c getopt_long.c)
ENDIF(MSVC)

SET(snowpack-app_sources
	Main.cc
	${getopt_src}
)

SET(SN_LINKS "snowpack")
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

FIND_PACKAGE(MeteoIO REQUIRED)
INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${METEOIO_INCLUDE_DIR})
#LINK_DIRECTORIES(${METEOIO_LIBRARIES}) #this, so that if the users types in paths, it works
LIST(APPEND SN_LINKS ${METEOIO_LIBRARIES})

IF(APPLE)
	#this is necessary for GUI exceptions
	LIST(APPEND SN_LINKS "-framework CoreServices")
ENDIF(APPLE)

#special features # currently set in the main CMakeLists.txt
#SET(DEBUG_ARITHM ON CACHE BOOL "Force-crash the application when doing an arithmetic exception")

IF(PLUGIN_IMISIO)
	FIND_PACKAGE(OCCI REQUIRED)
	INCLUDE_DIRECTORIES(SYSTEM ${OCCI_INCLUDE_DIR})
	LINK_DIRECTORIES(${OCCI_LIBRARIES})
	LIST(APPEND SN_LINKS ${OCCI_LIBRARIES})
ENDIF(PLUGIN_IMISIO)

IF(ENABLE_LAPACK)
	FIND_PACKAGE(Lapack REQUIRED)
	LINK_DIRECTORIES(${Lapack_LIBRARIES})
	LINK_DIRECTORIES(${Blas_LIBRARIES})
	LIST(APPEND SN_LINKS "lapack;blas")
ENDIF(ENABLE_LAPACK)

IF(PLUGIN_CAAMLIO)
	FIND_PACKAGE(LibXml2 REQUIRED)
	INCLUDE_DIRECTORIES(SYSTEM ${LIBXML2_INCLUDE_DIR})
	LINK_DIRECTORIES(${LIBXML2_LIBRARIES})
	LIST(APPEND SN_LINKS ${LIBXML2_LIBRARIES})
ENDIF(PLUGIN_CAAMLIO)

INCLUDE("${CMAKE_MODULE_PATH}/BuildVersion.cmake")
BuildVersion()

IF(UNIX)
	LIST(APPEND SN_LINKS "dl;pthread")
ENDIF(UNIX)

#Prepare executable
SET(BINARY "snowpack.app")
ADD_EXECUTABLE(${BINARY} ${snowpack-app_sources})

TARGET_LINK_LIBRARIES(${BINARY} ${SN_LINKS})

SET_TARGET_PROPERTIES(${BINARY} PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin"
	CLEAN_DIRECT_OUTPUT 1
	OUTPUT_NAME "snowpack"
)

INSTALL(TARGETS ${BINARY}
	RUNTIME DESTINATION bin
	COMPONENT exe
)
